--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://OksanaV2284.github.io/goit-js-hw-09-new",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-09-newgit /"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-09-new/"
   },
   "repository": {
     "type": "git",
